Bug fixing on mobile touch events, improved search method, various visual tweakings, improved UI (added Red ROcket font and background img on desktop view).

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: red-rocket;
+    src: url(../fonts/redrocketacadital.ttf);
+}
+
 html, body{
-  background-color: beige;
-  color: brown;
+    background-color: beige;
+    color: brown;
 }
 
 .bordes{
@@ -52,6 +57,7 @@ td, th {
     width: 6em;
     background-color: #006dcc;
     border: solid 2px transparent;
+    margin-top: 1.5em;
 }
 
 .botones:hover{
@@ -117,6 +123,9 @@ form input {
     float: right;
     margin: 0;
     margin-right: 1em;
+    color: darkred;
+    font-weight: bold;
+    text-shadow: -1px 1px 2px white;
 }
 
 form label {
@@ -208,7 +217,7 @@ table {
     outline: ridge 2px brown;
     outline-offset: .95em;
     padding: 0!important;
-    margin: 0 0 2em!important;
+    margin: 1em 0!important;
 }
 
 td {
@@ -237,6 +246,10 @@ th {
 th:last-child {
     background-color: transparent;
 }
+header {
+    font-family: red-rocket;
+    color: #7b2b2b;
+}
 
 @media screen and (max-width: 768px) {
     html, body {
@@ -253,11 +266,10 @@ th:last-child {
         width: 90%;
         margin: 0 5%!important;
         top: 1em;
+        padding: 2em 0!important;
     }
-    #modalWindow .glyphicon-remove-circle {
-        left: 0;
-        top: -.2em;
-        font-size: 3em;
+    #alerta h3 {
+        font-size: .3em!important;
     }
     #ejemplo {
         width: 80%;
@@ -291,11 +303,29 @@ th:last-child {
         margin-left: .2em;
     }
     #selectorPagina {
-        position: relative;
-        right: 42%;
+        width: 20%;
+        margin: 0 40%!important;
     }
     inputfield {
         margin: 0 auto!important;
         padding: 0!important;
+    }
+}
+@media screen and (min-width: 769px) {
+    body {
+        background-image: url("../img/mercedes.png");
+        background-blend-mode: multiply;
+        background-repeat: no-repeat;
+        background-position: top;
+    }
+    header {
+        text-shadow: 1px 1px 0 beige;
+    }
+    div {
+        background-color: transparent;
+        opacity: .93;
+    }
+    form input {
+        box-shadow: -3px -3px 20px #ddc6ab inset ;
     }
 }
